Ensure compilation tests will run on JDK 16+.
As noted [here](https://github.com/google/compile-testing/issues/222), the change of the default `--illegal-access` from `permit` to `deny` will cause compile-testing tests to fail by default, with messages like this:

```
class com.google.testing.compile.Parser (in unnamed module @0x4114d843) cannot
access class com.sun.tools.javac.api.JavacTool (in module jdk.compiler) because
module jdk.compiler does not export com.sun.tools.javac.api to unnamed module
@0x4114d843
```

We can work around that by supplying the necessary `--add-opens` flag to the JVM that runs the tests.

RELNOTES=n/a
PiperOrigin-RevId: 362531170