@@ -149,6 +149,14 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>${test.jvm.flags}</argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -193,6 +201,15 @@
       </activation>
       <properties>
         <exclude.tests>**/AutoValueJava8Test.java</exclude.tests>
+      </properties>
+    </profile>
+    <profile>
+      <id>open-modules</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <test.jvm.flags>--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</test.jvm.flags>
       </properties>
     </profile>
   </profiles>
